@@ -285,6 +285,7 @@ global:
 	mpd_status_get_song_pos;
 	mpd_status_get_song_id;
 	mpd_status_get_elapsed_time;
+	mpd_status_get_elapsed_ms;
 	mpd_status_get_total_time;
 	mpd_status_get_kbit_rate;
 	mpd_status_get_audio_format;
